--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
   <div class="container">
+    <div class="jumbotron">
     <h1>Movie Theater</h1>
+  </div>
     <div class="form">
       <form id='form-age'>
         <h3>Age</h3>
